--- a/index.html
+++ b/index.html
@@ -1,100 +1,323 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Josh Friese - Typist</title>
+    <title>Joshua C. Friese - Typist</title>
 
-    <meta charset='utf-8'>
-    <meta name='owner' content='Joshua Friese' />
-    <meta name='author' content='Joshua Friese, josh.friese@gmail.com' />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
+    <meta name='owner' content='Joshua C. Friese' />
+    <meta name='author' content='Joshua C. Friese, josh.friese@gmail.com' />
     <meta name='description' content='Icons thanks to http://fontawesome.io' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <link href='https://fonts.googleapis.com/css?family=Advent Pro' rel='stylesheet' />
-    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css' />
+
+    <!-- Links -->
     <link rel='stylesheet' href='https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css' />
     <link rel='stylesheet' href='assets/css/fontawesome-pro-solid.css'>
     <link rel='stylesheet' href='assets/css/fontawesome-pro-core.css'>
-    <link rel='stylesheet' href='assets/css/style1.css' />
-    <link rel='shortcut icon' type='image/png' href='assets/images/jf_logo_green.png' />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.7.3/webcomponents.min.js"></script>
-
+    <link rel='stylesheet' href='assets/css/animate.css' />
+    <link rel="stylesheet" href="assets/css/materialize.min.css">
+    <link rel="stylesheet" href="assets/min/plugin-min.css" type="text/css">
+    <link rel="stylesheet" href="assets/min/custom-min.css" type="text/css">
+    <link rel='stylesheet' href='assets/css/style.css' />
 </head>
 
-<body>
-    <!-- start container -->
-    <div class='container'>
-        <!-- picture and headline -->
-        <div class='main'>
-            <a href=''>
-                <img class='pic' title='I went to Santa Cruz, CA, once.' src='https://i.imgur.com/V9RhRkm.jpg' />
-            </a>
-            <p class='title'>Need&nbsp;development?</p>
-            <p class='bio'>
-                I'd be happy to help!</br>My name is
-                <span id='name'>Josh Friese</span> and...
-                <p>
-                    I am very enthusiastic about problem solving, headbanging and
-                    </br> sunny, open fields with my dog,
-                    <a id='atlas' href='assets/images/adidog.jpg'>Atlas. 🐶</a>
-                </p>
-            </p>
-        </div>
+<body id="top" class="scrollspy">
 
-        <div class="material-tabs">
-            <div class="tabbed-section__selector">
-                <a class="tabbed-section__selector-tab-1" href="#">
-                    <i class='fa fa-pencil fa-fw' aria-hidden='true'></i>&nbsp; Connect
-                </a>
-                <a class="tabbed-section__selector-tab-2" href="#">
-                    <i class='fa fa-address-card'></i>&nbsp; Résumé
-                </a>
-                <a class="tabbed-section__selector-tab-3" href="#">
-                    <i class='fa fa-cog fa-fw' aria-hidden='true'></i>&nbsp; Other
-                </a>
+    <!-- Return to top -->
+    <a href="javascript:" id="return-to-top"><i class="fa fa-chevron-up"></i></a>
 
-                <span class="tabbed-section__highlighter"></span>
-            </div>
-            <div class="tabbed-section-1 visible">
-                Under contruction...
-                <a class='buttons linkedin' href='https://www.linkedin.com/in/joshua-friese/'>
-                    <i class='fa fa-linkedin'></i>
-                </a>&nbsp;
-                <a class='buttons twitter' href='http://twitter.com/jawshology/'>
-                    <i class='fa fa-twitter-square'></i>
-                </a>&nbsp;
-                <a class='buttons github' href='http://github.com/phist210/'>
-                    <i class='fa fa-location-arrow'></i>
-                </a>&nbsp;
-                <a class='buttons mail' href='mailto:josh.frese@gmail.com'>
-                    <i class='fa fa-envelope'></i>
-                </a>
-            </div>
-            <div class="tabbed-section-2 hidden">
-                <object class='resume' data='assets/JoshFrieseResume.pdf' type='application/pdf' width='100%' height='400vmin'>
-                  <embed class='resume' src='assets/JoshFrieseResume.pdf'>
-                    This browser does not support PDFs. Please follow this link to view or download this PDF:</br>
-                  </embed>
-                  <a target='_blank' href='assets/JoshFrieseResume.pdf'>Open in new tab.</a>
-                </object>
-            </div>
-            <div class="tabbed-section-3 hidden">
-                <p>Coming soon!</p>
-                <img src="https://thecatapi.com/api/images/get?format=src&type=gif" alt="https://thecatapi.com/api/images/get?format=src&type=gif" />
-            </div>
-        </div>
+    <!-- Pre Loader -->
+    <div id="loader-wrapper">
+        <div id="loader"></div>
+
+        <div class="loader-section section-left"></div>
+        <div class="loader-section section-right"></div>
 
     </div>
+    <!--Navigation-->
+    <div class="navbar-fixed">
+        <nav id="nav_f" class="default_color" role="navigation">
+            <div class="container">
+                <div class="nav-wrapper">
+                    <a href="#" id="logo-container" class="brand-logo">Joshua C. Friese</a>
+                    <ul class="right hide-on-med-and-down">
+                        <li>
+                            <a href="#intro">Me</a>
+                        </li>
+                        <li>
+                            <a href="#work">Work</a>
+                        </li>
+                        <li>
+                            <a href="#contact">Contact</a>
+                        </li>
+                        </li>
+                        <li>
+                            <a href="assets/JoshFrieseResume.pdf">Résumé</a>
+                        </li>
+                    </ul>
+                    <ul id="nav-mobile" class="side-nav">
+                        <li>
+                            <a href="#intro">Me</a>
+                        </li>
+                        <li>
+                            <a href="#work">Work</a>
+                        </li>
+                        <li>
+                            <a href="#contact">Contact</a>
+                        </li>
+                        </li>
+                        <li>
+                            <a href="assets/JoshFrieseResume.pdf">Résumé</a>
+                        </li>
+                    </ul>
+                    <a href="#" data-activates="nav-mobile" class="button-collapse">
+                        <i class="mdi-navigation-menu"></i>
+                    </a>
+                </div>
+            </div>
+        </nav>
+    </div>
 
-    <!-- end container -->
-    <div class='footer'>
-        <a href='https://www.visitnc.com/raleigh-durham-the-triangle'>
-            <i class='fa fa-location-arrow'></i>
+    <!--Hero-->
+    <div class="section no-pad-bot" id="index-banner">
+        <div class="container">
+            <div class='bubble'>
+                <h1 class="text_h center header cd-headline letters type">
+                    <span>I love</span>
+                    <span class="cd-words-wrapper waiting">
+                        <b class="is-visible">typing...</b>
+                        <b>developing...</b>
+                        <b>learning...</b>
+                        <b>engineering...</b>
+                        <b>designing...</b>
+                        <b>exploring...</b>
+                    </span>
+                </h1>
+            </div>
+        </div>
+
+        <a href=''>
+            <img class="circle responsive-img pic" title='I went to Santa Cruz, CA, once.' src='https://i.imgur.com/V9RhRkm.jpg' />
         </a>
-        Triangle Area, NC, United States
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
-    <script src='assets/js/scriptin.js' type='text/javascript'></script>
+    <!--Intro and service-->
+    <div id="intro" class="section scrollspy">
+        <div class="container">
+            <div class="row">
+                <div class="col s12 m12 l12">
+                    <p class='bio'>
+                        My name is
+                        <span class='name'>Joshua C. Friese</span> and...
+                        <p class='inner-bio'>
+                            I am very enthusiastic about problem solving, headbanging and
+                            </br> sunny, open fields with my dog,
+                            <a class='special-text' href='assets/assets/img/adidog.jpg'>Atlas. 🐶</a>
+                        </p>
+                    </p>
+                </div>
+                <div class='row'>
+                    <div class="col s12 m4 l4">
+                        <div class="center promo promo-example">
+                            <i class="mdi-image-flash-on"></i>
+                            <h5 class="promo-caption">Detail Oriented</h5>
+                            <p class="light center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
+                        </div>
+                    </div>
+                    <div class="col s12 m4 l4">
+                        <div class="center promo promo-example">
+                            <i class="mdi-social-group"></i>
+                            <h5 class="promo-caption">User Experience Focused</h5>
+                            <p class="light center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                        </div>
+                    </div>
+                    <div class="col s12 m4 l4">
+                        <div class="center promo promo-example">
+                            <i class="mdi-hardware-desktop-windows"></i>
+                            <h5 class="promo-caption">Goal Driven</h5>
+                            <p class="light center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--Work-->
+    <div class="section scrollspy" id="work">
+        <div class="container">
+            <h2 class="header text_b">Work </h2>
+            <div class="row">
+                <div class="col s12 m4 l4">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/img/logo.png">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Masterpeace
+                                <i class="mdi-navigation-more-vert right"></i>
+                            </span>
+                            <p>
+                                <a target="_blank" href="https://masterpeace.herokuapp.com">Masterpeace, hosted by Heroku</a>
+                            </p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Masterpeace
+                                <i class="mdi-navigation-close right"></i>
+                            </span>
+                            <p>Here is some more information about this project that is only revealed once clicked on.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m4 l4">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/img/questionbox.jpg">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Question Box
+                                <i class="mdi-navigation-more-vert right"></i>
+                            </span>
+                            <p>
+                                <a target="_blank" href="http://sheltered-citadel-50707.herokuapp.com/">Question Box, hosted by Heroku</a>
+                            </p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Question Box
+                                <i class="mdi-navigation-close right"></i>
+                            </span>
+                            <p>Here is some more information about this project that is only revealed once clicked on.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m4 l4">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/img/kanban.png">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Kanban Board
+                                <i class="mdi-navigation-more-vert right"></i>
+                            </span>
+                            <p>
+                                <a target="_blank" href="https://mysterious-meadow-31968.herokuapp.com/kanban">Kanban Board, hosted by Heroku</a>
+                            </p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Kanban Board
+                                <i class="mdi-navigation-close right"></i>
+                            </span>
+                            <p>Here is some more information about this project that is only revealed once clicked on.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--Parallax-->
+    <div class="parallax-container">
+        <div class="parallax">
+            <img width=300 height=800 src="assets/img/studio.jpg">
+        </div>
+    </div>
+
+    <!--Team-->
+    <div class="section scrollspy" id="contact">
+        <div class="container">
+            <h2 class="header text_b"> Get Connected </h2>
+            <div class="row">
+                <div class="col s12 m3">
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--Footer-->
+    <footer id="contact" class="page-footer default_color scrollspy">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <form class="col s12" action="assets/contact.php" method="post">
+                        <div class="row">
+                            <div class="input-field col s6">
+                                <i class="mdi-action-account-circle prefix white-text"></i>
+                                <input id="icon_prefix" name="name" type="text" class="validate white-text">
+                                <label for="icon_prefix" class="white-text">Name</label>
+                            </div>
+                            <div class="input-field col s6">
+                                <i class="mdi-communication-email prefix white-text"></i>
+                                <input id="icon_email" name="email" type="email" class="validate white-text">
+                                <label for="icon_email" class="white-text">Email</label>
+                            </div>
+                            <div class="input-field col s12">
+                                <i class="mdi-editor-mode-edit prefix white-text"></i>
+                                <textarea id="icon_prefix2" name="message" class="materialize-textarea white-text"></textarea>
+                                <label for="icon_prefix2" class="white-text">Message</label>
+                            </div>
+                            <div class="col offset-s7 s5">
+                                <button class="btn waves-effect waves-light red darken-1" type="submit">Submit
+                                    <i class="mdi-content-send right white-text"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="col l3 s12">
+                    <h5 class="white-text">phist210.github.io</h5>
+                    <ul>
+                        <li>
+                            <a class="white-text" href="/">Home</a>
+                        </li>
+                        <li>
+                            <a class="white-text" href="/blog">Blog</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col l3 s12">
+                    <h5 class="white-text">Social</h5>
+                    <ul>
+                        <li>
+                            <a class="white-text" href="https://www.facebook.com/jcfriese">
+                                <i class="small fa fa-facebook white-text"></i> Facebook
+                            </a>
+                        </li>
+                        <li>
+                            <a class="white-text" href="https://github.com/phist210">
+                                <i class="small fa fa-github white-text"></i> Github
+                            </a>
+                        </li>
+                        <li>
+                            <a class="white-text" href="https://www.linkedin.com/in/joshuafriese">
+                                <i class="small fa fa-linkedin white-text"></i> Linkedin
+                            </a>
+                        </li>
+                        </li>
+                        <li>
+                            <a class="white-text" href="https://www.soundcloud.com/phistmusic">
+                                <i class="small fa fa-soundcloud white-text"></i> Soundcloud
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright default_color">
+            <div class="container">
+                Tweaked by
+                <a class="white-text" href="/">Joshua C. Friese</a>. Thanks to
+                <a class="white-text" href="http://materializecss.com/">materializecss</a>.
+            </div>
+        </div>
+    </footer>
+
+    <!--  Scripts-->
+    <script src="assets/min/plugin-min.js"></script>
+    <script src="assets/min/custom-min.js"></script>
+    <script src="assets/js/init.js"></script>
+
 </body>
 
 </html>
